# TrafficAnalyzer

./: CMakeLists.txt  README.md  monitor_traffic.sh
include/: traffic_analyzer.h  traffic_analyzer_ui.h
src/: application.cpp  main.cpp  traffic_analyzer.cpp  traffic_analyzer_cli.cpp  traffic_analyzer_ui.cpp
